# 5ive-amm

./: .gitignore  5IVE_TESTING_GUIDE 2.md  5IVE_TESTING_GUIDE.md  AGENTS.md  AGENTS_CHECKLIST.md  AGENTS_REFERENCE.md  AMM_COMPILATION_ISSUES.md  AMM_DEPLOYMENT_STATUS.md  BLOCKER_SUMMARY.md  BYTECODE_DEBUG_FINDINGS.md  CHANGES_MADE.md  CLAUDE.md  COMPILER_BUGS_DETAILED_ANALYSIS.md  COMPILER_FIXES_APPLIED.md  CONSTRAINT_COMPLETION_SUMMARY.md  CPI_IMPLEMENTATION_PLAN_PROGRESS.md  CPI_RUST_TESTS_SUMMARY.md  CPI_UNIT_TESTS_README.md  CRITICAL_BUG_SUMMARY.md  Cargo.toml  DEPLOYMENT_INVESTIGATION_FINDINGS.md  E2E_TESTING_CHECKLIST.md  ERROR_8122_INVESTIGATION.md  FIVEPROGRAM_IMPLEMENTATION.md  FIVEPROGRAM_SUMMARY.md  FIVEPROGRAM_USAGE_GUIDE.md  FIXES-SUMMARY.md  GEMINI.md  HANDOFF.md  HANDOFF_DEVNET_CU.md  HANDOFF_SDK_PARAMETER_ENCODING.md  HANDOFF_SESSION_2.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  INVESTIGATE.md  LENDING_DX_RCA_INVESTIGATION_SUMMARY.md  LOCALNET_HARDCODING_HANDOFF.md  LSP_IMPLEMENTATION_PROGRESS.md  OPTIMIZATION_ANALYSIS.md  (+109 more)
five-dsl-compiler/: AGENTS.md  CLAUDE.md  Cargo.toml  GEMINI.md  LINEAR_SCAN_ALLOCATION.md  POTENTIAL_ISSUES.md  PRODUCTION_READY_SUMMARY.md  README.md  REGISTER_OPTIMIZATION_RESULTS.md  WARP.md  check_output.txt  compile_errors.txt  dex_disasm.txt  fix_test_spans.py  grammar_metadata.toml  node_metadata.toml  test_import_init.v  test_init_minimal.v  test_registers.fbin  test_registers.v  test_return.fbin  test_spans.v  test_types_module.v  token_debug.fbin
five-dsl-compiler/examples/: security_example.v
five-dsl-compiler/grammar_macros/: Cargo.toml
five-dsl-compiler/src/: bytecode_parser.rs  compiler_error.rs  disassembler.rs  five_file.rs  import_discovery.rs  interface_registry.rs  interface_serializer.rs  lib.rs  metrics.rs  module_resolver.rs  security_rules.rs  session_support.rs  stdlib_registry.rs  test_modular_generator.rs  tokenizer.rs  workspace_resolver.rs
five-dsl-compiler/tests/: abi_limits.rs  bytecode_compaction_regression.rs  chess_mutation_regression.rs  cpi_compile_regression_tests.rs  cpi_unit_tests.rs  debug_compiler_test.rs  diagnostics_reserved_keyword_function.rs  docs_copy_snippets_tests.rs  dsl_feature_matrix.rs  feature_parity_matrix.rs  golden_bytecode.rs  lending_regression_account_subtyping.rs  lending_regression_casted_locals.rs  lending_regression_field_limit.rs  lending_regression_u128_fields.rs  lib.rs  modular_generator_tests.rs  multi_file_tests.rs  protocol_alignment_tests.rs  register_fused_test.v  stdlib_builtin_imports.rs  stdlib_builtin_lowering.rs  stdlib_builtin_negative.rs  template_modernization_regression_tests.rs  test_account_index_offset.rs  test_account_system.rs  test_attribute_macros.rs  test_bytecode_benchmarks.rs  test_bytecode_snapshots.rs  test_call_patching.rs  test_compiler_features.rs  test_compression.rs  test_constraint_snapshot.rs  test_constraints.rs  test_function_dispatch.rs  test_grammar_validation.rs  test_init_constraint_bytecode.rs  test_linear_scan_allocation.rs  test_multi_module_compilation.rs  test_parameter_indexing.rs  (+10 more)
five-lsp/: Cargo.toml  PHASE1_COMPLETION.md  build-wasm.sh
five-lsp/docs/: CONSTRAINT_COMPLETION.md  LSP_CONTRACT.md
five-lsp/src/: bridge.rs  document.rs  error.rs  lib.rs  main.rs  native.rs  server.rs  wasm.rs  workspace.rs
five-lsp/tests/: constraint_completion_demo.v  diagnostics_integration.rs  dsl_feature_matrix.rs  native_stdio_handshake.rs  wasm_contract_tests.rs
five-protocol/: Cargo.toml  OPCODE_SPEC.md  README.md
five-protocol/src/: bytecode_builder.rs  call_convention.rs  encoding.rs  execute_payload.rs  lib.rs  opcodes.rs  parser.rs  test_fixtures.rs  transport.rs  types.rs  value.rs
five-protocol/tests/: basic_tests.rs  coverage_tests.rs  execute_payload_fixtures.rs  fixtures.rs  opcode_consistency.rs  opcode_tests.rs  parser_comprehensive_tests.rs  value_deserialize.rs  value_tests.rs
five-solana/: .gitignore  CLAUDE.md  Cargo.toml  build_output.txt  constants.vm.toml  debug-keypair.json  new-five-kp.json  temp-kp.json  txtx.yml
five-solana/examples/: generate_admin_key.rs
five-solana/scripts/: run-runtime-tests.sh
five-solana/src/: common.rs  error.rs  generated_constants.rs  instructions.rs  large_program_tests.rs  lib.rs  state.rs  test_call_external.rs  test_call_external_constraint_bug.rs  test_call_external_constraints.rs  test_call_external_public_functions.rs  test_deploy_verification.rs  test_parameter_indexing.rs  test_polymorphic_integration.rs  test_script_header_v3.rs  tests.rs  tests_extended.rs  tests_optimized.rs  tests_process_instruction.rs  upgrade.rs
five-solana/tests/: bytecode_parse_fixture_tests.rs  call_external_constraint_bug_tests.rs  call_external_public_functions_tests.rs  coverage_increase_tests.rs  deploy_verification_tests.rs  deployment_tests.rs  fee_logic_tests.rs  instruction_utils_tests.rs  integration_tests.rs  opcode_tests.rs  parameter_indexing_tests.rs  process_instruction_tests.rs  runtime_bpf_cu_tests.rs  runtime_bpf_fee_cu_breakdown_tests.rs  runtime_bpf_fee_flow_tests.rs  runtime_bpf_init_account_tests.rs  runtime_bpf_invocation_semantics_tests.rs  runtime_bpf_opcode_micro_cu_tests.rs  runtime_feature_matrix_tests.rs  runtime_fee_and_validation_tests.rs  runtime_script_fixture_tests.rs  runtime_smoke_tests.rs  runtime_stdlib_builtin_unit_tests.rs  runtime_syscall_cpi_tests.rs  runtime_template_fixture_tests.rs  runtime_validator_account_probe_tests.rs  runtime_validator_cpi_probe_tests.rs  (+6 more)
five-vm-mito/: .gitignore  CLAUDE.md  Cargo.toml  PERFORMANCE_ANALYSIS.md  REFACTOR_PLAN.md  check_errors.txt  run_vm_tests.sh  test_debug_call.rs  test_errors.txt  test_errors_2.txt  test_errors_3.txt  test_errors_4.txt  test_swap_debug.rs
five-wasm/: AGENTS.md  CLAUDE.md  Cargo.toml  GEMINI.md  build.sh  check_output.txt  check_output_2.txt  check_output_3.txt  jest.config.js  package.json  stacks-vm-wasm-0.1.0.tgz  test-abi-generation.html  test-account-system.sh  test-opcode-analysis.html  test_abi_debug.js  test_abi_raw.js
(+2112 files in other folders)
