[package]
name = "five-lsp"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib"]

# [[bin]]
# name = "five-lsp"
# path = "src/main.rs"
# required-features = ["native"]
# TODO: Implement native binary transport (tower-lsp stdio pattern)

[dependencies]
lsp-types = "0.94"
five-dsl-compiler = { path = "../five-dsl-compiler" }
tokio = { version = "1.0", features = ["rt", "macros", "sync", "io-util"], optional = true }
tower-lsp = "0.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", optional = true }
thiserror = "1.0"
futures = "0.3"

# WASM support
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"

[features]
default = []
native = ["tokio", "tracing-subscriber"]  # Native binary uses tokio; WASM uses postMessage

[dev-dependencies]
tempfile = "3.8"
