[package]
name = "five"
version = "0.1.0"
edition = "2021"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(target_os, values("solana"))',
] }

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
pinocchio = { path = "../third_party/pinocchio" }
pinocchio-system = "0.2.3"
pinocchio-pubkey = "0.2.4"
five-vm-mito = { path = "../five-vm-mito", default-features = false }
five-protocol = { path = "../five-protocol" }
bytemuck = { version = "1.13", features = ["derive"] }

# Optional dependencies
pinocchio-log = { version = "0.4.0", optional = true }
solana-nostd-sha256 = "0.1.3"
five8_const = "0.1.3"

[dev-dependencies]
solana-program = "1.18.0"
five-protocol = { path = "../five-protocol", features = ["test-fixtures"] }

[features]
default = ["debug-logs"]
# Enable debug logging (disabled in production)
debug-logs = ["pinocchio-log", "five-vm-mito/debug-logs", "five-vm-mito/trace-execution"]
# Use test-sbf feature when running tests
test-sbf = []
# Production builds with minimal dependencies
production = []

# Profile settings moved to workspace-level Cargo.toml for consistency
