[package]
name = "five"
version = "0.1.0"
edition = "2021"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(target_os, values("solana"))',
] }

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
pinocchio = { path = "../third_party/pinocchio" }
pinocchio-system = "0.2.3"
pinocchio-pubkey = "0.2.4"
five-vm-mito = { path = "../five-vm-mito", default-features = false }
five-protocol = { path = "../five-protocol" }
bytemuck = { version = "1.13", features = ["derive"] }
blake3 = "=1.5.5"

# Optional dependencies
pinocchio-log = { version = "0.4.0", optional = true }
solana-nostd-sha256 = "0.1.3"
five8_const = "0.1.3"

[dev-dependencies]
solana-program = "1.18.0"
solana-program-test = "1.18.26"
solana-client = "1.18.26"
solana-sdk = "1.18.26"
solana-transaction-status = "1.18.26"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
time = "=0.3.36"
time-core = "=0.1.2"
time-macros = "=0.2.18"
five-protocol = { path = "../five-protocol", features = ["test-fixtures"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
spl-token = "4.0.0"
five-dsl-compiler = { path = "../five-dsl-compiler" }
bs58 = "0.5"
ed25519-dalek = "1.0.1"

[features]
default = []
cluster-hardcoded-pdas = []
# Enable debug logging (disabled in production)
debug-logs = ["pinocchio-log", "five-vm-mito/debug-logs", "five-vm-mito/trace-execution"]
# Use test-sbf feature when running tests
test-sbf = []
# Runtime fee-path bypass for CU attribution (bench/testing only).
cu-bypass-fees = []
# Compile validator RPC harness and validator-gated tests.
validator-harness = []
# Compile canonical in-process RuntimeHarness helpers.
inprocess-test-harness = []
# Legacy compatibility alias retained for one release.
legacy-runtime-harness = ["inprocess-test-harness"]
# Production builds with minimal dependencies
production = ["five-vm-mito/unchecked-execution"]

# Profile settings moved to workspace-level Cargo.toml for consistency
