[package]
name = "five-vm-mito"
version = "0.1.0"
edition = "2021"
authors = ["FIVE Team"]
description = "Ultra-lightweight MitoVM for FIVE with zero-allocation execution and function calls"
license = "MIT"

# Part of main FIVE workspace

[dependencies]
# Custom Pinocchio fork with refresh_after_cpi() method for CPI pointer refresh
pinocchio = { path = "../third_party/pinocchio" }
five-protocol = { path = "../five-protocol" }
solana-nostd-sha256 = "0.1.3"
#five8_const = "0.1.3"

# Optional debug logging support
pinocchio-log = { version = "0.4.0", optional = true }
heapless = "0.8"

[target.'cfg(not(target_os = "solana"))'.dependencies]
tiny-keccak = { version = "2", features = ["keccak"] }
blake3 = "1"

[dev-dependencies]
# Test framework dependencies (NOT included in production builds)
solana-sdk = "1.18"
solana-program-runtime = "1.18"
hex = "0.4"
five-dsl-compiler = { path = "../five-dsl-compiler" }
criterion = { version = "0.5", features = ["html_reports"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = []
# Feature for debugging support (adds execution tracing)
debug-logs = ["dep:pinocchio-log"]
# Development-only feature for granular execution tracing (opcode-by-opcode)
trace-execution = ["debug-logs"]
# Development-only feature for enhanced error diagnostics
enhanced-errors = []
# Development-only feature for test utilities and Mollusk-style testing
test-utils = []
# Feature for sol_remaining_compute_units syscall (not available on devnet v3.1.6 or earlier)
remaining-cu-syscall = []
# Feature for unchecked execution (unsafe bounds check removal) - REQUIRES DEPLOY-TIME VERIFICATION
unchecked-execution = []

[lib]
name = "five_vm_mito"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[test]]
name = "no_alloc"
path = "tests/no_alloc.rs"
harness = false

[[bench]]
name = "value_access_overhead"
harness = false


# [[bin]]
# name = "standalone_perf_analysis"
# path = "standalone_perf_analysis.rs"
