[package]
name = "five-vm-wasm"
version = "0.1.0"
edition = "2021"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# MitoVM dependencies
five-vm-mito = { path = "../five-vm-mito", default-features = false }
five-dsl-compiler = { path = "../five-dsl-compiler", default-features = false }
five-protocol = { path = "../five-protocol" }
pinocchio = { path = "../third_party/pinocchio" }

# WASM bindings
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.4"

# Utilities
console_error_panic_hook = "0.1"
bs58 = "0.5"


[dependencies.web-sys]
version = "0.3"
features = [
  "console",
  "Performance",
  "Window",
  "Document",
]

[features]
default = []
# Development-only debug logging passthrough to MitoVM.
debug-logs = ["five-vm-mito/debug-logs"]
# Development-only enhanced error diagnostics passthrough to MitoVM.
enhanced-errors = ["five-vm-mito/enhanced-errors"]

[dev-dependencies]
# Test framework
tokio = { version = "1.0", features = ["macros", "rt"] }
wasm-bindgen-test = "0.3"

# Profile settings moved to workspace-level Cargo.toml
